// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore component renders correctly 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly when trigger button is clicked 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Close
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button is clicked 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with content expanded 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
